[gd_scene format=3 uid="uid://cc1fomjf362h5"]

[ext_resource type="Script" uid="uid://dmk7ono2imeae" path="res://addons/flowerwall_crt/scripts/flowerwall_crt_script.gd" id="1_8p6dx"]
[ext_resource type="Script" uid="uid://dxlwhj47enyqa" path="res://addons/flowerwall_crt/scripts/config ui scripts/fl_crt_presets.gd" id="2_aii1a"]
[ext_resource type="Material" uid="uid://bi5044m2v1vwf" path="res://addons/flowerwall_crt/shaders/blurx_shader.material" id="2_vteqg"]
[ext_resource type="Script" uid="uid://tog6nmrph15b" path="res://addons/flowerwall_crt/scripts/config ui scripts/fl_crt_ui_slider.gd" id="8_orrbg"]
[ext_resource type="Script" uid="uid://c5emn1tatcw1r" path="res://addons/flowerwall_crt/scripts/config ui scripts/fl_crt_ui_toggle.gd" id="9_30wqw"]
[ext_resource type="Material" uid="uid://cyel5f1gad7ru" path="res://addons/flowerwall_crt/shaders/crt_shader.material" id="28_aii1a"]
[ext_resource type="Material" uid="uid://b78hncxnplod1" path="res://addons/flowerwall_crt/shaders/blury_shader.material" id="28_yx2vx"]
[ext_resource type="Material" uid="uid://cmatshkkajove" path="res://addons/flowerwall_crt/shaders/bloom_shader.material" id="29_aii1a"]
[ext_resource type="Script" uid="uid://dtpi5lt33t6eg" path="res://addons/flowerwall_crt/scripts/config ui scripts/fl_crt_close.gd" id="32_8p6dx"]
[ext_resource type="Script" uid="uid://ch7evcy0lie0m" path="res://addons/flowerwall_crt/scripts/config ui scripts/fl_crt_save.gd" id="32_jahb0"]

[sub_resource type="Theme" id="Theme_sa3ql"]
default_font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_my6d0"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_4uar2"]
font_size = 12

[sub_resource type="Theme" id="Theme_x4850"]
default_font_size = 12

[sub_resource type="Theme" id="Theme_2pvsh"]
default_font_size = 12

[node name="flowerwall_pp" type="Control" unique_id=1736349292 node_paths=PackedStringArray("flowerwall_crt_config_ui", "preblur_x", "preblur_y", "post_bloom", "crt", "grid_toggle", "slot_toggle", "scanlines_size_slider", "scanlines_interval_slider")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_8p6dx")
flowerwall_crt_config_ui = NodePath("UI")
preblur_x = NodePath("preblur_x")
preblur_y = NodePath("preblur_y")
post_bloom = NodePath("post_bloom")
crt = NodePath("CRT")
grid_toggle = NodePath("UI/FlowerwallCrtConfigUi/Options/Enable Grid Mask/RGB_grid_toggle")
slot_toggle = NodePath("UI/FlowerwallCrtConfigUi/Options/Enable Slot Mask/RGB_slot_toggle")
scanlines_size_slider = NodePath("UI/FlowerwallCrtConfigUi/Options/Scalines Size/scanlines_size_slider")
scanlines_interval_slider = NodePath("UI/FlowerwallCrtConfigUi/Options/Scalines Interval/scanlines_interval_slider")

[node name="preblur_x" type="CanvasLayer" parent="." unique_id=1725093549]
layer = 100

[node name="x_blur" type="ColorRect" parent="preblur_x" unique_id=1754651421]
material = ExtResource("2_vteqg")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="preblur_y" type="CanvasLayer" parent="." unique_id=199741647]
layer = 100

[node name="y_blur" type="ColorRect" parent="preblur_y" unique_id=1459370736]
material = ExtResource("28_yx2vx")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="CRT" type="CanvasLayer" parent="." unique_id=1743063007]
layer = 102

[node name="crt_shader" type="ColorRect" parent="CRT" unique_id=1860442333]
material = ExtResource("28_aii1a")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="post_bloom" type="CanvasLayer" parent="." unique_id=542168968]
layer = 103

[node name="bloom" type="ColorRect" parent="post_bloom" unique_id=1738910186]
material = ExtResource("29_aii1a")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="UI" type="CanvasLayer" parent="." unique_id=531467533]
layer = 104

[node name="FlowerwallCrtConfigUi" type="ColorRect" parent="UI" unique_id=1349915492]
offset_left = 2.0
offset_top = 3.0
offset_right = 478.0
offset_bottom = 357.0
size_flags_horizontal = 4
color = Color(0.121569, 0.121569, 0.121569, 0.721569)

[node name="Presets" type="OptionButton" parent="UI/FlowerwallCrtConfigUi" unique_id=287673459 node_paths=PackedStringArray("preblurx_sl", "preblury_sl", "bloom_t", "bloom_i", "smear_sl", "scanlines_size_sl", "scanlines_op_sl", "scanlines_int_sl", "grain_sl", "wiggle_sl", "curve_sl", "grid", "slot", "mask_strength_sl", "pixel_size_sl")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 100.0
offset_top = 30.0
offset_right = 226.0
offset_bottom = 61.0
grow_horizontal = 2
theme = SubResource("Theme_sa3ql")
item_count = 6
popup/item_0/text = "3x3 Slot (default)"
popup/item_0/id = 0
popup/item_1/text = "3x3 Grid"
popup/item_1/id = 1
popup/item_2/text = "4x4 Slot"
popup/item_2/id = 2
popup/item_3/text = "4x4 Grid"
popup/item_3/id = 3
popup/item_4/text = "VHS"
popup/item_4/id = 4
popup/item_5/text = "Disabled"
popup/item_5/id = 5
script = ExtResource("2_aii1a")
preblurx_sl = NodePath("../Options/Pre-Blur Strength X/blurx_slider")
preblury_sl = NodePath("../Options/Pre-Blur Strength Y/blury_slider")
bloom_t = NodePath("../Options/Bloom Threshold/bloom_threshold_slider")
bloom_i = NodePath("../Options/Bloom Intensity/bloom_intensity_slider")
smear_sl = NodePath("../Options/Smearing Strength/smearing_strength_slider")
scanlines_size_sl = NodePath("../Options/Scalines Size/scanlines_size_slider")
scanlines_op_sl = NodePath("../Options/Scalines Opacity/scanlines_opacity_slider")
scanlines_int_sl = NodePath("../Options/Scalines Interval/scanlines_interval_slider")
grain_sl = NodePath("../Options/Grain Strength/grain_slider")
wiggle_sl = NodePath("../Options/Wiggle Strength/wiggle_strength_slider")
curve_sl = NodePath("../Options/Curvature Slider/curvature_slider")
grid = NodePath("../Options/Enable Grid Mask/RGB_grid_toggle")
slot = NodePath("../Options/Enable Slot Mask/RGB_slot_toggle")
mask_strength_sl = NodePath("../Options/Mask Strength/mask_strength_slider")
pixel_size_sl = NodePath("../Options/Pixel Size/pixel_size_slider")

[node name="Preset" type="Label" parent="UI/FlowerwallCrtConfigUi/Presets" unique_id=1300854204]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
text = "Preset"
label_settings = SubResource("LabelSettings_my6d0")
horizontal_alignment = 1

[node name="Options" type="VBoxContainer" parent="UI/FlowerwallCrtConfigUi" unique_id=88385094]
layout_mode = 1
offset_left = 5.0
offset_top = 5.0
offset_right = 325.0
offset_bottom = 355.0

[node name="Pre-Blur Strength X" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options" unique_id=891422699]
layout_mode = 2

[node name="Pre-Blur Strength X" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Pre-Blur Strength X" unique_id=1260578021]
layout_mode = 2
size_flags_horizontal = 3
text = "Horiz. Blur Strength"
label_settings = SubResource("LabelSettings_4uar2")

[node name="blurx_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Pre-Blur Strength X" unique_id=2019584402]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 9.0
value = 6.0
script = ExtResource("8_orrbg")
_mat = ExtResource("2_vteqg")
_var = "shader_parameter/radius"

[node name="Pre-Blur Strength Y" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options" unique_id=1728846635]
layout_mode = 2

[node name="Pre-Blur Strength Y" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Pre-Blur Strength Y" unique_id=855443695]
layout_mode = 2
size_flags_horizontal = 3
text = "Vert. Blur Strength"
label_settings = SubResource("LabelSettings_4uar2")

[node name="blury_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Pre-Blur Strength Y" unique_id=1410601393]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 9.0
value = 6.0
script = ExtResource("8_orrbg")
_mat = ExtResource("28_yx2vx")
_var = "shader_parameter/radius"

[node name="Bloom Threshold" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options" unique_id=1952590716]
layout_mode = 2

[node name="Bloom Threshold" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Bloom Threshold" unique_id=1259653308]
layout_mode = 2
size_flags_horizontal = 3
text = "Bloom Threshold"
label_settings = SubResource("LabelSettings_4uar2")

[node name="bloom_threshold_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Bloom Threshold" unique_id=1250291239]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 0.12
script = ExtResource("8_orrbg")
_mat = ExtResource("29_aii1a")
_var = "shader_parameter/bloom_threshold"

[node name="Bloom Intensity" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options" unique_id=1476804787]
layout_mode = 2

[node name="Bloom Intensity" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Bloom Intensity" unique_id=479151873]
layout_mode = 2
size_flags_horizontal = 3
text = "Bloom Intensity"
label_settings = SubResource("LabelSettings_4uar2")

[node name="bloom_intensity_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Bloom Intensity" unique_id=1852442465]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 3.0
step = 0.1
value = 0.5
script = ExtResource("8_orrbg")
_mat = ExtResource("29_aii1a")
_var = "shader_parameter/bloom_intensity"

[node name="Smearing Strength" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options" unique_id=1180427204]
layout_mode = 2

[node name="Smearing Strength" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Smearing Strength" unique_id=495659261]
layout_mode = 2
size_flags_horizontal = 3
text = "Color Smearing Strength"
label_settings = SubResource("LabelSettings_4uar2")

[node name="smearing_strength_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Smearing Strength" unique_id=1569168442]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.1
value = 1.0
script = ExtResource("8_orrbg")
_mat = ExtResource("28_aii1a")
_var = "shader_parameter/smearing_strength"

[node name="Scalines Size" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options" unique_id=1547340403]
layout_mode = 2

[node name="Scanlines Size" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Scalines Size" unique_id=1106361431]
layout_mode = 2
size_flags_horizontal = 3
text = "Scanlines Size"
label_settings = SubResource("LabelSettings_4uar2")

[node name="scanlines_size_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Scalines Size" unique_id=2005803484]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 12.0
value = 1.0
script = ExtResource("8_orrbg")
_mat = ExtResource("28_aii1a")
_var = "shader_parameter/scanlines_thickness"

[node name="Scalines Opacity" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options" unique_id=40091710]
layout_mode = 2

[node name="Scanlines Opacity" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Scalines Opacity" unique_id=225441528]
layout_mode = 2
size_flags_horizontal = 3
text = "Scanlines Opacity"
label_settings = SubResource("LabelSettings_4uar2")

[node name="scanlines_opacity_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Scalines Opacity" unique_id=324640571]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.45
script = ExtResource("8_orrbg")
_mat = ExtResource("28_aii1a")
_var = "shader_parameter/scanlines_opacity"

[node name="Scalines Interval" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options" unique_id=1734180494]
layout_mode = 2

[node name="Scanlines Interval" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Scalines Interval" unique_id=615875986]
layout_mode = 2
size_flags_horizontal = 3
text = "Scanlines Interval"
label_settings = SubResource("LabelSettings_4uar2")

[node name="scanlines_interval_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Scalines Interval" unique_id=1806531452]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 2.0
max_value = 12.0
value = 3.0
script = ExtResource("8_orrbg")
_mat = ExtResource("28_aii1a")
_var = "shader_parameter/scanlines_interval"

[node name="Grain Strength" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options" unique_id=902497970]
layout_mode = 2

[node name="Grain Strength" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Grain Strength" unique_id=1891174222]
layout_mode = 2
size_flags_horizontal = 3
text = "Grain Strength"
label_settings = SubResource("LabelSettings_4uar2")

[node name="grain_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Grain Strength" unique_id=550277768]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.3
script = ExtResource("8_orrbg")
_mat = ExtResource("28_aii1a")
_var = "shader_parameter/grain_strength"

[node name="Wiggle Strength" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options" unique_id=1060085203]
layout_mode = 2

[node name="Wiggle Strength" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Wiggle Strength" unique_id=1094946833]
layout_mode = 2
size_flags_horizontal = 3
text = "VHS Wiggle Strength"
label_settings = SubResource("LabelSettings_4uar2")

[node name="wiggle_strength_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Wiggle Strength" unique_id=1942383450]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 0.2
step = 0.02
value = 0.04
script = ExtResource("8_orrbg")
_mat = ExtResource("28_aii1a")
_var = "shader_parameter/wiggle"

[node name="Curvature Slider" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options" unique_id=52124433]
layout_mode = 2

[node name="Curving Strength" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Curvature Slider" unique_id=1226488107]
layout_mode = 2
size_flags_horizontal = 3
text = "Curving Strength"
label_settings = SubResource("LabelSettings_4uar2")

[node name="curvature_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Curvature Slider" unique_id=1199697687]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 1.05
step = 0.005
value = 1.02
script = ExtResource("8_orrbg")
_mat = ExtResource("28_aii1a")
_var = "shader_parameter/curve_power"

[node name="Enable Slot Mask" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options" unique_id=1575357293]
layout_mode = 2

[node name="Enable Slot Mask" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Enable Slot Mask" unique_id=979182062]
layout_mode = 2
size_flags_horizontal = 3
text = "Slot Mask"
label_settings = SubResource("LabelSettings_4uar2")

[node name="RGB_slot_toggle" type="CheckButton" parent="UI/FlowerwallCrtConfigUi/Options/Enable Slot Mask" unique_id=1382248850]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
action_mode = 0
alignment = 2
script = ExtResource("9_30wqw")
_mat = ExtResource("28_aii1a")
_var = "shader_parameter/enable_slotmask"

[node name="Enable Grid Mask" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options" unique_id=24678318]
layout_mode = 2

[node name="Enable Grid Mask" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Enable Grid Mask" unique_id=1769974627]
layout_mode = 2
size_flags_horizontal = 3
text = "Grid Mask"
label_settings = SubResource("LabelSettings_4uar2")

[node name="RGB_grid_toggle" type="CheckButton" parent="UI/FlowerwallCrtConfigUi/Options/Enable Grid Mask" unique_id=352465012]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
action_mode = 0
alignment = 2
script = ExtResource("9_30wqw")
_mat = ExtResource("28_aii1a")
_var = "shader_parameter/enable_gridmask"

[node name="Mask Strength" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options" unique_id=922976945]
layout_mode = 2

[node name="Mask Strength" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Mask Strength" unique_id=875223878]
layout_mode = 2
size_flags_horizontal = 3
text = "Mask Strength"
label_settings = SubResource("LabelSettings_4uar2")

[node name="mask_strength_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Mask Strength" unique_id=950158620]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.1
value = 0.5
script = ExtResource("8_orrbg")
_mat = ExtResource("28_aii1a")
_var = "shader_parameter/mask_strength"

[node name="Pixel Size" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options" unique_id=382898588]
layout_mode = 2

[node name="Pixel Size" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Pixel Size" unique_id=1836392259]
layout_mode = 2
size_flags_horizontal = 3
text = "Pixel Size"
label_settings = SubResource("LabelSettings_4uar2")

[node name="pixel_size_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Pixel Size" unique_id=2122839453]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 3.0
max_value = 4.0
value = 3.0
script = ExtResource("8_orrbg")
_mat = ExtResource("28_aii1a")
_var = "shader_parameter/pixel_size"

[node name="Save" type="Button" parent="UI/FlowerwallCrtConfigUi" unique_id=1996559080 node_paths=PackedStringArray("preblur_x_mat", "preblur_y_mat", "crt_mat", "bloom_mat")]
layout_mode = 0
offset_left = 345.0
offset_top = 236.0
offset_right = 465.0
offset_bottom = 276.0
scale = Vector2(0.9287003, 0.9287003)
theme = SubResource("Theme_x4850")
text = "Save
"
script = ExtResource("32_jahb0")
preblur_x_mat = NodePath("../../../preblur_x/x_blur")
preblur_y_mat = NodePath("../../../preblur_y/y_blur")
crt_mat = NodePath("../../../CRT/crt_shader")
bloom_mat = NodePath("../../../post_bloom/bloom")

[node name="Close" type="Button" parent="UI/FlowerwallCrtConfigUi" unique_id=825543894]
layout_mode = 0
offset_left = 345.0
offset_top = 294.0
offset_right = 465.0
offset_bottom = 336.0
scale = Vector2(0.9287003, 0.9287003)
theme = SubResource("Theme_2pvsh")
text = "Close
(F1)"
script = ExtResource("32_8p6dx")

[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Pre-Blur Strength X/blurx_slider" to="." method="_on_blurx_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Pre-Blur Strength Y/blury_slider" to="." method="_on_blury_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Bloom Threshold/bloom_threshold_slider" to="." method="_on_bloom_threshold_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Bloom Intensity/bloom_intensity_slider" to="." method="_on_bloom_intensity_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Smearing Strength/smearing_strength_slider" to="." method="_on_smearing_strength_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Scalines Size/scanlines_size_slider" to="." method="_on_scanlines_size_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Scalines Opacity/scanlines_opacity_slider" to="." method="_on_scanlines_opacity_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Scalines Interval/scanlines_interval_slider" to="." method="_on_scanlines_interval_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Grain Strength/grain_slider" to="." method="_on_grain_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Wiggle Strength/wiggle_strength_slider" to="." method="_on_wiggle_strength_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Curvature Slider/curvature_slider" to="." method="_on_curvature_slider_value_changed"]
[connection signal="toggled" from="UI/FlowerwallCrtConfigUi/Options/Enable Slot Mask/RGB_slot_toggle" to="." method="_on_slotmask_toggle_toggled"]
[connection signal="toggled" from="UI/FlowerwallCrtConfigUi/Options/Enable Grid Mask/RGB_grid_toggle" to="." method="_on_gridmask_toggle_toggled"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Mask Strength/mask_strength_slider" to="." method="_on_mask_strength_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Pixel Size/pixel_size_slider" to="." method="_on_pixel_size_slider_value_changed"]
